force-app/main/default/objects/custom_create174__c/custom_create174__c.object-meta.xml
<CustomObject>
    <label>Custom created object174</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects174</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>