force-app/main/default/objects/custom_create174__c/fields/custom_create_174field568__c.field-meta.xml
<CustomField>
    <fullName>custom_create_174field568__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 174field568</label>
    <type>Checkbox</type>
</CustomField>